@@ -99,6 +99,7 @@
 	- fix: digests on input FD_t dinna work.
 	- fix: remove rebuilddb debugging leakage.
 	- successors from tsort are processed in presentation order.
+	- fix: find-requires.perl needed update (#23450).
 
 3.0.6 -> 4.0
 	- use DIRNAMES/BASENAMES/DIRINDICES not FILENAMES in packages and db.
